--- a/class/about.html
+++ b/class/about.html
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<title>CME Capstone Event</title>
+		<link href="capstoneStyles.css" rel="stylesheet" />
 	</head>
 	<body>
-			<a href="index.html" id="logoLink"><img src="../Images/CapstoneLogoSM.svg" alt="Capstone Logo" width="157" height="58"/></a>
 			<nav>
+				<a href="index.html" id="logoLink"><img src="../Images/CapstoneLogoSM.svg" alt="Capstone Logo" width="157" height="58"/></a>
 				<ul>
 					<li><a href="about.html">About</a></li>
 					<li><a href="schedule.html">Schedule</a></li>
@@ -17,14 +18,14 @@
 
 		<header><h1>About</h1></header>
 		<article>
-			<p>The Capstone Event for Creative Media and Entertainment students started in 2013. 
-				This event showcases the incredible talent of our graduating seniors. Each Digital 
-				Media Production and Interactive Media student is required to complete a senior capstone 
-				project. This project demonstrates all they have learned over their four years at Butler 
-				University. Students are responsible for conception and production of each project. 
-				Because we are so proud of our students and their creations, we host a Capstone Event 
-				that showcases each of these projects for students, faculty, family, industry professionals, 
-				and other members of the community to view. Join us for this year's Capstone Event! 
+			<p>The Capstone Event for Creative Media and Entertainment students started in 2013.
+				This event showcases the incredible talent of our graduating seniors. Each Digital
+				Media Production and Interactive Media student is required to complete a senior capstone
+				project. This project demonstrates all they have learned over their four years at Butler
+				University. Students are responsible for conception and production of each project.
+				Because we are so proud of our students and their creations, we host a Capstone Event
+				that showcases each of these projects for students, faculty, family, industry professionals,
+				and other members of the community to view. Join us for this year's Capstone Event!
 			</p>
 			<p><i>Arrive early; seating is limited.</i></p>
 		</article>
@@ -34,6 +35,6 @@
 				Butler University
 			</p>
 		</footer>
-		
+
 	</body>
 </html>
