fall break image assignment

--- a/assignments/fall-break/index.html
+++ b/assignments/fall-break/index.html
@@ -1,21 +1,34 @@
 <html>
 <head>
   <title>CME306 | Fall Break Image</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <div class="container">
-    <div class="moon"></div>
-    <div class="title">Have a Great Fall Break</div>
-    <div class="pumpkinContainer">
-      <div class="pumpkin"></div>
-      <div class="pumpkin"></div>
-      <div class="pumpkin"></div>
-      <div class="pumpkin"></div>
-    </div>
-    <div class="ground"></div>
+  <div class='container'>
+  <div class='moon'>
+    <div class='moon-overlay'></div>
   </div>
+  <div class='title'>
+    Have a Great Fall Break
+  </div>
+  <div class='pumpkin-container'>
+    <div class='pumpkin'>
+      <div class='pumpkin-top'></div>
+    </div>
+    <div class='pumpkin'>
+      <div class='pumpkin-top'></div>
+    </div>
+    <div class='pumpkin'>
+      <div class='pumpkin-top'></div>
+    </div>
+    <div class='pumpkin'>
+      <div class='pumpkin-top'></div>
+    </div>
+  </div>
+  <div class='ground'></div>
+</div>
 
 </body>
 </html>
