--- a/class/schedule.html
+++ b/class/schedule.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<a href="index.html" id="logoLink"><img src="Images/CapstoneLogoSM.svg" alt="Capstone Logo" width="157" height="58"/></a>
-			<nav>
+			<nav role="navigation">
 				<ul>
 					<li><a href="about.html">About</a></li>
 					<li><a href="schedule.html">Schedule</a></li>
@@ -30,8 +30,8 @@
 				</ul>
 			</div>
 
-		<header><h1>Schedule</h1></header>
-		<article>
+		<header role="banner"><h1>Schedule</h1></header>
+		<article role="main">
 			<div id="pageNav">
 				<ul>
 					<a href="#GH102"><li>GH102</li></a>
