--- a/assignments/dropdown-menu/index.html
+++ b/assignments/dropdown-menu/index.html
@@ -5,38 +5,59 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h3>Site Title</h3>
+  <nav>
     <ul>
+      <li><h3>Site Title</h3></li>
       <li>
-        Parent 1
+        <a  >Parent 1</a>
         <ul>
-          <li>Child 1.1</li>
-          <li>Child 1.2</li>
-          <li>Child 1.3</li>
-          <li>Child 1.4</li>
+          <li><a  >Child 1.1</a></li>
+          <li><a  >Child 1.2</a></li>
+          <li><a  >Child 1.3</a></li>
+          <li><a  >Child 1.4</a>
+            <ul>
+              <li><a  >Child 1.4.1</a></li>
+              <li><a  >Child 1.4.2</a></li>
+              <li><a  >Child 1.4.3</a></li>
+              <li><a  >Child 1.4.4</a></li>
+            </ul>
+          </li>
         </ul>
       </li>
       <li>
-        Parent 2
+        <a  >Parent 2</a>
         <ul>
-          <li>Child 2.1</li>
-          <li>Child 2.2</li>
-          <li>Child 2.3</li>
-          <li>Child 2.4</li>
+          <li><a  >Child 2.1</a></li>
+          <li><a  >Child 2.2</a></li>
+          <li><a  >Child 2.3</a></li>
+          <li><a  >Child 2.4</a>
+            <ul>
+              <li><a  >Child 2.4.1</a></li>
+              <li><a  >Child 2.4.2</a></li>
+              <li><a  >Child 2.4.3</a></li>
+              <li><a  >Child 2.4.4</a></li>
+            </ul>
+          </li>
         </ul>
       </li>
       <li>
-        Parent 3
+        <a  >Parent 3</a>
         <ul>
-          <li>Child 3.1</li>
-          <li>Child 3.2</li>
-          <li>Child 3.3</li>
-          <li>Child 3.4</li>
+          <li><a  >Child 3.1</a></li>
+          <li><a  >Child 3.2</a></li>
+          <li><a  >Child 3.3</a></li>
+          <li><a  >Child 3.4</a>
+            <ul>
+              <li><a  >Child 3.4.1</a></li>
+              <li><a  >Child 3.4.2</a></li>
+              <li><a  >Child 3.4.3</a></li>
+              <li><a  >Child 3.4.4</a></li>
+            </ul>
+          </li>
         </ul>
       </li>
     </ul>
-  </header>
+  </nav>
 </body>
 
 </html>
