import new framework, update stuff

--- a/final/index.html
+++ b/final/index.html
@@ -14,15 +14,15 @@
   <main>
     <p>Body content</p>
     <div class="row">
-      <div class="col s4">
+      <div class="col s12 m4 l4">
         test col 1
       </div>
 
-      <div class="col s4">
+      <div class="col s12 m4 l4">
         test col 2
       </div>
 
-      <div class="col s4">
+      <div class="col s12 m4 l4">
         test col 3
       </div>
     </div>
