--- a/final/index.html
+++ b/final/index.html
@@ -33,6 +33,6 @@
     <p>Footer content</p>
   </footer>
 
-  <script src="js/main.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
