starting to add homepage content

--- a/final/index.html
+++ b/final/index.html
@@ -5,33 +5,42 @@
 </head>
 <body>
 
-  <header>
-    <img src="img/logo2015.png" class="logo"/>
-    <h1 class="site-title">Info about the company!</h1>
-    <h3>Header content</h3>
-  </header>
+  <div class="container">
+    <header>
+      <img src="img/logo2015.png" class="logo"/>
+      <h1 class="site-title">Info about the company!</h1>
+      <h3>Header content</h3>
+    </header>
 
-  <main>
-    <p>Body content</p>
-    <div class="row">
-      <div class="col s12 m4 l4">
-        test col 1
+    <main>
+      <p>Body content</p>
+
+      <div class="row">
+        <div class="col s12 m6 l4">
+          <h3>Register your points!</h3>
+        </div>
+        <div class="col s12 m6 l4">
+          <h3>Register for fuel discounts!</h3>
+        </div>
+        <div class="col s12 m6 l4">
+          <img alt="ad 1 here" />
+          <img alt="ad 2 here" />
+        </div>
+        <div class="col s12 m6 l8">
+          <h3 class="white-text">Current members account login.</h3>
+        </div>
       </div>
 
-      <div class="col s12 m4 l4">
-        test col 2
+      <div class="row">
+
       </div>
 
-      <div class="col s12 m4 l4">
-        test col 3
-      </div>
-    </div>
+    </main>
 
-  </main>
-
-  <footer>
-    <p>Footer content</p>
-  </footer>
+    <footer>
+      <p>Footer content</p>
+    </footer>
+  </div>
 
   <script src="js/app.js"></script>
 </body>
