--- a/final/index.html
+++ b/final/index.html
@@ -13,26 +13,26 @@
     </header>
 
     <main>
-      <p>Body content</p>
-
+      
       <div class="row">
-        <div class="col s12 m6 l4">
+        <div class="col s12 m4 l4">
           <h3>Register your points!</h3>
         </div>
-        <div class="col s12 m6 l4">
+        <div class="col s12 m4 l4">
           <h3>Register for fuel discounts!</h3>
         </div>
-        <div class="col s12 m6 l4">
-          <img alt="ad 1 here" />
-          <img alt="ad 2 here" />
-        </div>
-        <div class="col s12 m6 l8">
-          <h3 class="white-text">Current members account login.</h3>
+        <div class="col s12 m4 l4">
+          <img id="ad1" alt="ad 1 here" />
         </div>
       </div>
 
       <div class="row">
-
+        <div class="col s12 m8 l8">
+          <h3 class="white-text">Current members account login.</h3>
+        </div>
+        <div class="col s12 m4 l4">
+          <img id="ad2" alt="ad 2 here" />
+        </div>
       </div>
 
     </main>
