--- a/final/index.html
+++ b/final/index.html
@@ -15,38 +15,41 @@
     <main>
 
       <div class="row">
-        <div class="col s12 m4 l4">
-          <h1>Register your points!</h1>
-        </div>
-        <div class="col s12 m4 l4">
-          <h1>Register for fuel discounts!</h1>
+        <div class="col s12 m8">
+          <div class="row">
+            <div class="col s12 m6">
+              <h1>Register your points!</h1>
+            </div>
+            <div class="col s12 m6">
+              <h1>Register for fuel discounts!</h1>
+            </div>
+            <div class="col s12 m12">
+              <h1 class="white-text">Current members account login.</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12 m8 l8">
+              <h2>RICKER'S REWARDS JUST GOT BETTER!</h2>
+              <p>Sign up today and join one or both of our truly rewarding customer loyalty programs:</p>
+              <h3>Rewards Points and In-Store Clubs</h3>
+              <ul>
+                <li>Earn points on nearly every purchase in store and at the pump.</li>
+                <li>Redeem points to spend like cash for FREE fuel, food, merchandise and more!</li>
+              </ul>
+              <h2>Rewards Fuel Club</h2>
+              <ul>
+                <li>Register your card to be used for payment, just like a debit card.</li>
+                <li>Save up to 10&cent; a gallon every time you fill up!</li>
+                <li>Already a current member? Access and update your Rewards Fuel Club account HERE.</li>
+              </ul>
+            </div>
+          </div>
         </div>
         <div class="col s12 m4 l4">
           <img id="ad1" class="ad" alt="ad 1 here" src="img/ad1.jpg" />
         </div>
-      </div>
-
-      <div class="row">
-        <div class="col s12 m8 l8">
-          <h1 class="white-text">Current members account login.</h1>
-        </div>
         <div class="col s12 m4 l4">
           <img id="ad2" class="ad" alt="ad 2 here" src="img/ad2.jpg" />
-        </div>
-        <div class="col s12 m8 l8">
-          <h2>RICKER'S REWARDS JUST GOT BETTER!</h2>
-          <p>Sign up today and join one or both of our truly rewarding customer loyalty programs:</p>
-          <h3>Rewards Points and In-Store Clubs</h3>
-          <ul>
-            <li>Earn points on nearly every purchase in store and at the pump.</li>
-            <li>Redeem points to spend like cash for FREE fuel, food, merchandise and more!</li>
-          </ul>
-          <h2>Rewards Fuel Club</h2>
-          <ul>
-            <li>Register your card to be used for payment, just like a debit card.</li>
-            <li>Save up to 10&cent; a gallon every time you fill up!</li>
-            <li>Already a current member? Access and update your Rewards Fuel Club account HERE.</li>
-          </ul>
         </div>
       </div>
 
