--- a/final/footer.html
+++ b/final/footer.html
@@ -1,47 +1,104 @@
 
 <ul>
-  <ul>
-    <li>Enroll Your Card</li>
-  </ul>
-  <ul>
-    <li>Rewards</li>
-    <li>About</li>
-    <li>Enroll</li>
-    <li>FAQ</li>
-    <li>Login</li>
-    <li>Privacy Policy</li>
-    <li>Terms of Use</li>
-  </ul>
-  <ul>
-    <li>Careers</li>
-    <li>Career Opportunities</li>
-    <li>Work Schedules</li>
-    <li>Duties</li>
-    <li>Wages</li>
-    <li>Benefits</li>
-    <li>RISE Awards Program</li>
-    <li>Training</li>
-    <li>How to Apply</li>
-  </ul>
-  <ul>
-    <li>Community</li>
-  </ul>
-  <ul>
-    <li>Specials</li>
-    <li>Ricker's App</li>
-  </ul>
-
-  <ul>
-    <li>Locations</li>
-  </ul>
-  <ul>
-    <li>Company</li>
-    <li>Contact Us</li>
-    <li>Newsroom</li>
-    <li>Press Releases</li>
-    <li>Featured Publications</li>
-    <li>Corporate Logos &amp; Photos</li>
-    <li>Fuel Supply</li>
-    <li>Fleet Card</li>
-  </ul>
+  <li><ul>
+    <li>
+      <a href="rewards.html">Enroll Your Card</a>
+    </li>
+  </ul></li>
+  <li><ul>
+    <li>
+      <a href="rewards.html">Rewards</a>
+    </li>
+    <li>
+      <a href="about.html">About</a>
+    </li>
+    <li>
+      <a href="#">Enroll</a>
+    </li>
+    <li>
+      <a href="faq.html">FAQ</a>
+    </li>
+    <li>
+      <a href="login.html">Login</a>
+    </li>
+    <li>
+      <a href="terms.html">Privacy Policy</a>
+    </li>
+    <li>
+      <a href="terms.html">Terms of Use</a>
+    </li>
+  </ul></li>
+  <li><ul>
+    <li>
+      <a href="careers.html">Careers</a>
+    </li>
+    <li>
+      <a href="careers.html">Career Opportunities</a>
+    </li>
+    <li>
+      <a href="#">Work Schedules</a>
+    </li>
+    <li>
+      <a href="#">Duties</a>
+    </li>
+    <li>
+      <a href="#">Wages</a>
+    </li>
+    <li>
+      <a href="#">Benefits</a>
+    </li>
+    <li>
+      <a href="#">RISE Awards Program</a>
+    </li>
+    <li>
+      <a href="#">Training</a>
+    </li>
+    <li>
+      <a href="#">How to Apply</a>
+    </li>
+  </ul></li>
+  <li><ul>
+    <li>
+      <a href="community.html">Community</a>
+    </li>
+  </ul></li>
+  <li><ul>
+    <li>
+      <a href="specials.html">Specials</a>
+    </li>
+    <li>
+      <a href="#">Ricker's App</a>
+    </li>
+  </ul></li>
+  <li><ul>
+    <li>
+      <a href="locations.html">Locations</a>
+    </li>
+  </ul></li>
+  <li><ul>
+    <li>
+      <a href="company.html">Company</a>
+    </li>
+    <li>
+      <a href="contact.html">Contact Us</a>
+    </li>
+    <li>
+      <a href="#">Newsroom</a>
+    </li>
+    <li>
+      <a href="#">Press Releases</a>
+    </li>
+    <li>
+      <a href="#">Featured Publications</a>
+    </li>
+    <li>
+      <a href="#">Corporate Logos &amp; Photos</a>
+    </li>
+    <li>
+      <a href="#">Fuel Supply</a>
+    </li>
+    <li>
+      <a href="#">Fleet Card</a>
+    </li>
+  </ul></li>
 </ul>
