--- a/final/rewards.html
+++ b/final/rewards.html
@@ -6,24 +6,20 @@
 <body>
 
   <div class="container">
-    <header>
-      <img alt="Rickers Logo" id="logo" src="img/logo2015.png"/>
-      <h1 class="site-title">Info about the company!</h1>
-      <h3>Header content</h3>
-    </header>
+
 
     <main>
 
       <div class="row">
-        <div class="col s12 m8">
+        <div class="col s12 m8 l8">
           <div class="row">
-            <div class="col s12 m6">
+            <div class="col s12 m6 l6">
               <h1>Register your points!</h1>
             </div>
-            <div class="col s12 m6">
+            <div class="col s12 m6 l6">
               <h1>Register for fuel discounts!</h1>
             </div>
-            <div class="col s12 m12">
+            <div class="col s12 m12 l12">
               <h1 class="white-text">Current members account login.</h1>
             </div>
           </div>
@@ -48,22 +44,117 @@
         </div>
         <div class="col s12 m4 l4">
           <img id="ad1" class="ad" alt="ad 1 here" src="img/ad1.jpg" />
-        </div>
-        <div class="col s12 m4 l4">
           <img id="ad2" class="ad" alt="ad 2 here" src="img/ad2.jpg" />
         </div>
       </div>
-
-      <div class="row">
-        <div class="col s12 m8 l8">
-
-        </div>
-      </div>
-
     </main>
 
     <footer>
-      <p>Footer content</p>
+
+      <ul>
+        <li><ul>
+          <li>
+            <a href="rewards.html">Enroll Your Card</a>
+          </li>
+        </ul></li>
+        <li><ul>
+          <li>
+            <a href="rewards.html">Rewards</a>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="#">Enroll</a>
+          </li>
+          <li>
+            <a href="faq.html">FAQ</a>
+          </li>
+          <li>
+            <a href="login.html">Login</a>
+          </li>
+          <li>
+            <a href="terms.html">Privacy Policy</a>
+          </li>
+          <li>
+            <a href="terms.html">Terms of Use</a>
+          </li>
+        </ul></li>
+        <li><ul>
+          <li>
+            <a href="careers.html">Careers</a>
+          </li>
+          <li>
+            <a href="careers.html">Career Opportunities</a>
+          </li>
+          <li>
+            <a href="#">Work Schedules</a>
+          </li>
+          <li>
+            <a href="#">Duties</a>
+          </li>
+          <li>
+            <a href="#">Wages</a>
+          </li>
+          <li>
+            <a href="#">Benefits</a>
+          </li>
+          <li>
+            <a href="#">RISE Awards Program</a>
+          </li>
+          <li>
+            <a href="#">Training</a>
+          </li>
+          <li>
+            <a href="#">How to Apply</a>
+          </li>
+        </ul></li>
+        <li><ul>
+          <li>
+            <a href="community.html">Community</a>
+          </li>
+        </ul></li>
+        <li><ul>
+          <li>
+            <a href="specials.html">Specials</a>
+          </li>
+          <li>
+            <a href="#">Ricker's App</a>
+          </li>
+        </ul></li>
+        <li><ul>
+          <li>
+            <a href="locations.html">Locations</a>
+          </li>
+        </ul></li>
+        <li><ul>
+          <li>
+            <a href="company.html">Company</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact Us</a>
+          </li>
+          <li>
+            <a href="#">Newsroom</a>
+          </li>
+          <li>
+            <a href="#">Press Releases</a>
+          </li>
+          <li>
+            <a href="#">Featured Publications</a>
+          </li>
+          <li>
+            <a href="#">Corporate Logos &amp; Photos</a>
+          </li>
+          <li>
+            <a href="#">Fuel Supply</a>
+          </li>
+          <li>
+            <a href="#">Fleet Card</a>
+          </li>
+        </ul></li>
+      </ul>
+
     </footer>
   </div>
 
