--- a/class/students.html
+++ b/class/students.html
@@ -6,20 +6,20 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<a href="index.html" id="logoLink"><img src="Images/CapstoneLogoSM.svg" alt="Capstone Logo" width="157" height="58"/></a>
-			<nav>
-				<ul>
-					<li><a href="about.html">About</a></li>
-					<li><a href="schedule.html">Schedule</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="students.html">Students</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</nav>
+		<nav role="navigation">
+			<a href="index.html" id="logoLink"><img src="Images/CapstoneLogoSM.svg" alt="Capstone Logo" width="157" height="58"/></a>
+			<ul>
+				<li><a href="about.html">About</a></li>
+				<li><a href="schedule.html">Schedule</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="students.html">Students</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
 
-		<header><h1>Students</h1></div>
+		<header><h1>Students</h1></div></header>
 		<article>
-			<section>
+			<section class="studentBox">
 				<img src="Images/Students/KAdami.png" alt="Konstantina Adami"/>
 				<h3>Konstantina Adami</h3>
 				<p><i>Strategic Communications and DMP Majors, CCOM</i></p>
@@ -32,7 +32,7 @@
 					Southern East or West Coast. </p>
 			</section>
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/Beal-Personal-Pic.jpg" alt="William Beal"/>
 					<h3>William Beal</h3>
 					<p><i>DMP Major, CCOM</i></p>
@@ -44,7 +44,7 @@
 					Indy Fuel hockey games and IUPUI men and women's basketball games to name a few. </p>
 			</section>
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/ceko.jpg" alt="Peter Ceko"/>
 					<h3>Peter Ceko</h3>
 					<p><i>DMP Major, CCOM</i></p>
@@ -57,7 +57,7 @@
 					that had my attention at the time.</p>
 			</section>
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/Emis face.jpg" alt="Emi Dammers"/>
 					<h3>Emi Dammers</h3>
 					<p><i>DMP Major, CCOM</i></p>
@@ -71,7 +71,7 @@
 			</section>
 
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/Brooke.jpg" alt="Brooke Dominguez"/>
 					<h3>Brooke Dominguez</h3>
 					<p><i>Art + Design, JCA and DMP Major, CCOM</i></p>
@@ -85,7 +85,7 @@
 			</section>
 
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/JGaal.jpg" alt="Joshua Gaal"/>
 					<h3>Joshua Gaal</h3>
 					<p><i>Art + Design Major, JCA</i></p>
@@ -99,7 +99,7 @@
 			</section>
 
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/EvanKrauss.jpg" alt="Evan Krauss"/>
 					<h3>Evan Krauss</h3>
 					<p><i>Strat Com and DMP Majors, CCOM</i></p>
@@ -113,7 +113,7 @@
 					at Butler University. </p>
 			</section>
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/Humburg.jpg" alt="Morgan Humburg"/>
 					<h3>Morgan Humburg</h3>
 					<p><i>Theatre, JCA and DMP, CCOM majors</i></p>
@@ -127,7 +127,7 @@
 					Fingers crossed!</p>
 			</section>
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/MLegel.jpg" alt="Morgan Legel"/>
 					<h3>Morgan Legel</h3>
 					<p><i>Journalism and DMP Majors, CCOM</i></p>
@@ -140,7 +140,7 @@
 						the company that allowed me so many opportunities while in school.</p>
 			</section>
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/WLisak.jpg" alt="William Lisak"/>
 					<h3>William Lisak</h3>
 					<p><i>DMP Major, CCOM</i></p>
@@ -153,7 +153,7 @@
 					my foot in the door and develop my skill set in the work field.</p>
 			</section>
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/MattMichel.jpg" alt="Matt Michel"/>
 					<h3>Matt Michel</h3>
 					<p><i>DMP Major, CCOM</i></p>
@@ -166,7 +166,7 @@
 					pursuing opportunities wherever they come about in the more distant future.</p>
 			</section>
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/Nestor.png" alt="Nestor Porres"/>
 					<h3>Nestor Porres</h3>
 					<p><i>DMP Major, CCOM</i></p>
@@ -180,7 +180,7 @@
 					Nestor hopes to attend graduate school. </p>
 			</section>
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/OCarroll_pic.png" alt="Bridget O’Carroll"/>
 					<h3>Bridget O'Carroll</h3>
 					<p><i>Arts Administration, JCA and DMP Major, CCOM</i></p>
@@ -192,7 +192,7 @@
 					the arts and supporting arts education is something she values.</p>
 			</section>
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/Selheim_Headshot.JPG" alt="Alexandra Selheim"/>
 					<h3>Alexandra Selheim</h3>
 					<p><i>DMP Major, CCOM</i></p>
@@ -206,7 +206,7 @@
 					of the classroom.</p>
 			</section>
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/Sparrow-Annie.gif" alt="Annie Sparrow"/>
 					<h3>Annie Sparrow</h3>
 					<p><i>DMP Major, CCOM</i></p>
@@ -219,7 +219,7 @@
 			</section>
 
 
-			<section >
+			<section class="studentBox" >
 					<img src="Images/Students/Sutherland.jpg" alt="Andy Sutherland"/>
 					<h3>Andy Sutherland</h3>
 					<p><i>RIS and DMP Major, CCOM</i></p>
@@ -232,7 +232,7 @@
 					artist management and music marketing.</p>
 			</section>
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/mt1.jpg" alt="Marko Tomich"/>
 					<h3>Marko Tomich</h3>
 					<p><i>Sports Media and Strat Comm majors, CCOM</i></p>
@@ -243,7 +243,7 @@
 					and have traveled thousands of miles to watch the Dawgs during holiday tournaments.</p>
 			</section>
 
-			<section>
+			<section class="studentBox">
 					<img src="Images/Students/IjUchnedu.jpg" alt="Ijeoma Frank Uchendu"/>
 					<h3>Ijeoma Frank Uchendu</h3>
 					<p><i>DMP Major, CCOM</i></p>
