--- a/class/about.html
+++ b/class/about.html
@@ -6,16 +6,16 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-			<nav>
-				<a href="index.html" id="logoLink"><img src="../Images/CapstoneLogoSM.svg" alt="Capstone Logo" width="157" height="58"/></a>
-				<ul>
-					<li><a href="about.html">About</a></li>
-					<li><a href="schedule.html">Schedule</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="students.html">Students</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</nav>
+		<nav role="navigation">
+			<a href="index.html" id="logoLink"><img src="Images/CapstoneLogoSM.svg" alt="Capstone Logo" width="157" height="58"/></a>
+			<ul>
+				<li><a href="about.html">About</a></li>
+				<li><a href="schedule.html">Schedule</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="students.html">Students</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
 
 		<header><h1>About</h1></header>
 		<article>
