--- a/class/contact.html
+++ b/class/contact.html
@@ -6,7 +6,6 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-
 		<nav role="navigation">
 			<a href="index.html" id="logoLink"><img src="Images/CapstoneLogoSM.svg" alt="Capstone Logo" width="157" height="58"/></a>
 			<ul>
@@ -17,6 +16,17 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
+
+		<div id="miniNav" role="navigation">
+			<div id="lineBox"><hr/><hr/><hr/></div>
+			<ul>
+				<li><a href="about.html">About</a></li>
+				<li><a href="schedule.html">Schedule</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="students.html">Students</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
 
 			<header role="banner"><h1>Contact Us</h1></header>
 			<article role="main">
