--- a/class/projects.html
+++ b/class/projects.html
@@ -17,6 +17,17 @@
 			</ul>
 		</nav>
 
+		<div id="miniNav" role="navigation">
+			<div id="lineBox"><hr/><hr/><hr/></div>
+			<ul>
+				<li><a href="about.html">About</a></li>
+				<li><a href="schedule.html">Schedule</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="students.html">Students</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
+
 
 		<header><h1>Projects</h1></header>
 		<article>
