--- a/class/index.html
+++ b/class/index.html
@@ -16,6 +16,17 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
+
+		<div id="miniNav" role="navigation">
+			<div id="lineBox"><hr/><hr/><hr/></div>
+			<ul>
+				<li><a href="about.html">About</a></li>
+				<li><a href="schedule.html">Schedule</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="students.html">Students</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</div>
 		<div>
 			<img src="Images/CapstoneLogo2.svg" alt="Capstone Logo"/>
 		</div>
