--- a/class/ContactError.html
+++ b/class/ContactError.html
@@ -28,27 +28,26 @@
 			</ul>
 		</div>
 
-			<header><h1>Contact Us</h1></header>
-			<article>
-				<p>There was a problem with your form. Please resubmit your form.</p>
-				<br/>
-					<form action="SimpleForm.php" method="post">
-						<label>Name:</label>
-						<input type="text" /><br/>
-						<label">Email:</label>
-						<input type="text"/><br/>
-						<label>Comments:</label>
-						<textarea></textarea><br/>
-						<input type="submit" value="Submit Form"/>
-					</form>
+		<header role="banner"><h1>Contact Us</h1></header>
+		<article role="main">
+			<p>There was a problem with your form. Please resubmit your form.</p>
+			<br/>
+				<form action="SimpleForm.php" method="post">
+					<label>Name:</label>
+					<input type="text" /><br/>
+					<label>Email:</label>
+					<input type="text"/><br/>
+					<label>Comments:</label>
+					<textarea></textarea><br/>
+					<input type="submit" value="Submit Form"/>
+				</form>
 
-			</article>
-		<footer>
+		</article>
+		<footer role="contentinfo">
 			<p>Creative Media and Entertainment <br/>
 				College of Communication <br/>
 				Butler University
 			</p>
 		</footer>
-
 	</body>
 </html>
