--- a/class/about.html
+++ b/class/about.html
@@ -28,8 +28,8 @@
 			</ul>
 		</div>
 
-		<header><h1>About</h1></header>
-		<article>
+		<header role="banner"><h1>About</h1></header>
+		<article role="main">
 			<p>The Capstone Event for Creative Media and Entertainment students started in 2013.
 				This event showcases the incredible talent of our graduating seniors. Each Digital
 				Media Production and Interactive Media student is required to complete a senior capstone
@@ -41,12 +41,12 @@
 			</p>
 			<p><i>Arrive early; seating is limited.</i></p>
 		</article>
-		<footer>
+
+		<footer role="contentinfo">
 			<p>Creative Media and Entertainment <br/>
 				College of Communication <br/>
 				Butler University
 			</p>
 		</footer>
-
 	</body>
 </html>
