--- a/class/index.html
+++ b/class/index.html
@@ -27,7 +27,7 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div>
+		<div id="indexImage">
 			<img src="Images/CapstoneLogo2.svg" alt="Capstone Logo"/>
 		</div>
 		<div>
@@ -52,7 +52,7 @@
 			</div>
 		</div>
 
-		<footer>
+		<footer role="contentinfo">
 			<p>Creative Media and Entertainment <br/>
 				College of Communication <br/>
 				Butler University
