--- a/class/projects.html
+++ b/class/projects.html
@@ -29,8 +29,8 @@
 		</div>
 
 
-		<header><h1>Projects</h1></header>
-		<article>
+		<header role="banner"><h1>Projects</h1></header>
+		<article role="main">
 			<div>
 				<ul>
 					<a href="#video"><li>Video</li></a>
@@ -237,7 +237,7 @@
 			</section>
 		</article>
 
-		<footer>
+		<footer role="contentinfo">
 			<p>Creative Media and Entertainment <br/>
 				College of Communication <br/>
 				Butler University
