--- a/class/schedule.html
+++ b/class/schedule.html
@@ -54,142 +54,140 @@
 
 			<section>
 				<h2 id="GH102">Gallahue Hall Room 102</h2>
-					<section class="clearfix">
-						<img src="Images/Projects/KAdamiProject.jpg" alt="Student Athlete"/>
-						<p class="time">5:30</p>
-						<h3>Life of a Student Athlete</h3>
-						<p>Konstantina Adami</p>
-					</section>
-
-					<section class="clearfix">
-						<img src="Images/Projects/Chipolte.jpg" alt="Chipolte"/>
-						<p class="time">5:45</p>
-						<h3>Chipolte: Food Served Fast or Fast Food?</h3>
-						<p>Morgan Legel</p>
-					</section>
-
-					<section class="clearfix">
-						<img src="Images/Projects/copacastlogo.jpg" alt="Copacast"/>
-						<p class="time">6:15</p>
-						<h3>Copacast</h3>
-						<p>William Lisak</p>
-					</section>
-
-					<section class="clearfix">
-						<img src="Images/Projects/DesktopDesign.jpg" alt="The Future is Now"/>
-						<p class="time">6:30</p>
-						<h3>The Future is Now</h3>
-						<p>Greg Rearden</p>
-					</section>
-
+				<section class="clearfix">
+					<img src="Images/Projects/KAdamiProject.jpg" alt="Student Athlete"/>
+					<p class="time">5:30</p>
+					<h3>Life of a Student Athlete</h3>
+					<p>Konstantina Adami</p>
 				</section>
 
-				<section>
-					<h2 id="GH105">Gallahue Hall Room 105</h2>
-
-					<section class="clearfix">
-						<img src="Images/Projects/IjProject.jpg" alt="Serina Kachimoto"/>
-						<p class="time">5:30</p>
-						<h3>Life of Serina Kachimoto</h3>
-						<p>Ijeoma Frank Uchendu</p>
-					</section>
-
-					<section class="clearfix">
-						<img src="Images/Projects/CareerDevelopmentModel.png" alt="Dawg Bites"/>
-						<p class="time">6:00</p>
-						<h3>Dawg Bites</h3>
-						<p>Ali Selheim</p>
-					</section>
-
-					<section class="clearfix">
-						<img src="Images/Projects/Project screenshot.jpg" alt="Let It BU"/>
-						<p class="time">6:15</p>
-						<h3>Let it BU</h3>
-						<p>Brooke Dominguez</p>
-					</section>
-
-					<section class="clearfix" class="room clearfix">
-						<img src="Images/Projects/Untitled-Project-Photo.jpg" alt="Untitled"/>
-						<p class="time">6:30</p>
-						<h3>Untitled</h3>
-						<p>Joshua Gaal</p>
-					</section>
-
+				<section class="clearfix">
+					<img src="Images/Projects/Chipolte.jpg" alt="Chipolte"/>
+					<p class="time">5:45</p>
+					<h3>Chipolte: Food Served Fast or Fast Food?</h3>
+					<p>Morgan Legel</p>
 				</section>
 
-				<section>
-					<h2 id="GH106">Gallahue Hall 106</h2>
-
-					<section class="clearfix">
-						<img src="Images/Projects/PHOTOPORT.gif" alt="Butler Code"/>
-						<p class="time">5:30</p>
-						<h3>Butler Code</h3>
-						<p>Maurice Simmons &amp; Annie Sparrow</p>
-					</section>
-
-					<section class="clearfix">
-						<img src="Images/Projects/BobsBirthday.png" alt="Bob's Birthday"/>
-						<p class="time">6:00</p>
-						<h3>Bob's Birthday</h3>
-						<p>Nestor Porres</p>
-					</section>
-
-					<section class="clearfix">
-						<img src="Images/Projects/SutherlandProject.png" alt="I Am Myself"/>
-						<p class="time">6:15</p>
-						<h3>I Am Myself</h3>
-						<p>Andrew Sutherland</p>
-					</section>
-
-					<section class="clearfix">
-						<img src="Images/Projects/BealProject.jpg" alt="The Breakthrough"/>
-						<p class="time">6:30</p>
-						<h3>The Breakthrough</h3>
-						<p>William Beal</p>
-					</section>
-
+				<section class="clearfix">
+					<img src="Images/Projects/copacastlogo.jpg" alt="Copacast"/>
+					<p class="time">6:15</p>
+					<h3>Copacast</h3>
+					<p>William Lisak</p>
 				</section>
 
-				<section>
-					<h2 id="GH108">Gallahue Hall 108</h2>
-						<section class="clearfix">
-							<img src="Images/Projects/Krauss.png" alt="Blue and Jack"/>
-							<p class="time">5:30</p>
-							<h3>Butler Blue and Georgetown Jack: America's Best Hope</h3>
-							<p>Evan Krauss</p>
-						</section>
+				<section class="clearfix">
+					<img src="Images/Projects/DesktopDesign.jpg" alt="The Future is Now"/>
+					<p class="time">6:30</p>
+					<h3>The Future is Now</h3>
+					<p>Greg Rearden</p>
+				</section>
 
-						<section class="clearfix">
-							<img src="Images/Projects/InsideButlerBasketball.png" alt="Butler Basketball"/>
-							<p class="time">5:45</p>
-							<h3>Inside Butler Basketball</h3>
-							<p>Matt Michel</p>
-						</section>
+			</section>
 
-						<section class="clearfix">
-							<img src="Images/Projects/HumburgProject.jpg" alt="Amethyst"/>
-							<p class="time">6:00</p>
-							<h3>Amethyst</h3>
-							<p>Morgan Humburg</p>
-						</section>
+			<section>
+				<h2 id="GH105">Gallahue Hall Room 105</h2>
 
-						<section class="clearfix">
-							<img src="Images/Projects/CoverH2BH.jpg" alt="How to Be Human"/>
-							<p class="time">6:45</p>
-							<h3>How to Be Human</h3>
-							<p>Emily Dammers</p>
-						</section>
-					</section>
+				<section class="clearfix">
+					<img src="Images/Projects/IjProject.jpg" alt="Serina Kachimoto"/>
+					<p class="time">5:30</p>
+					<h3>Life of Serina Kachimoto</h3>
+					<p>Ijeoma Frank Uchendu</p>
+				</section>
 
-				</article>
+				<section class="clearfix">
+					<img src="Images/Projects/CareerDevelopmentModel.png" alt="Dawg Bites"/>
+					<p class="time">6:00</p>
+					<h3>Dawg Bites</h3>
+					<p>Ali Selheim</p>
+				</section>
 
-			<footer>
+				<section class="clearfix">
+					<img src="Images/Projects/Project screenshot.jpg" alt="Let It BU"/>
+					<p class="time">6:15</p>
+					<h3>Let it BU</h3>
+					<p>Brooke Dominguez</p>
+				</section>
+
+				<section class="clearfix" class="room clearfix">
+					<img src="Images/Projects/Untitled-Project-Photo.jpg" alt="Untitled"/>
+					<p class="time">6:30</p>
+					<h3>Untitled</h3>
+					<p>Joshua Gaal</p>
+				</section>
+
+			</section>
+
+			<section>
+				<h2 id="GH106">Gallahue Hall 106</h2>
+
+				<section class="clearfix">
+					<img src="Images/Projects/PHOTOPORT.gif" alt="Butler Code"/>
+					<p class="time">5:30</p>
+					<h3>Butler Code</h3>
+					<p>Maurice Simmons &amp; Annie Sparrow</p>
+				</section>
+
+				<section class="clearfix">
+					<img src="Images/Projects/BobsBirthday.png" alt="Bob's Birthday"/>
+					<p class="time">6:00</p>
+					<h3>Bob's Birthday</h3>
+					<p>Nestor Porres</p>
+				</section>
+
+				<section class="clearfix">
+					<img src="Images/Projects/SutherlandProject.png" alt="I Am Myself"/>
+					<p class="time">6:15</p>
+					<h3>I Am Myself</h3>
+					<p>Andrew Sutherland</p>
+				</section>
+
+				<section class="clearfix">
+					<img src="Images/Projects/BealProject.jpg" alt="The Breakthrough"/>
+					<p class="time">6:30</p>
+					<h3>The Breakthrough</h3>
+					<p>William Beal</p>
+				</section>
+
+			</section>
+
+			<section>
+				<h2 id="GH108">Gallahue Hall 108</h2>
+				<section class="clearfix">
+					<img src="Images/Projects/Krauss.png" alt="Blue and Jack"/>
+					<p class="time">5:30</p>
+					<h3>Butler Blue and Georgetown Jack: America's Best Hope</h3>
+					<p>Evan Krauss</p>
+				</section>
+
+				<section class="clearfix">
+					<img src="Images/Projects/InsideButlerBasketball.png" alt="Butler Basketball"/>
+					<p class="time">5:45</p>
+					<h3>Inside Butler Basketball</h3>
+					<p>Matt Michel</p>
+				</section>
+
+				<section class="clearfix">
+					<img src="Images/Projects/HumburgProject.jpg" alt="Amethyst"/>
+					<p class="time">6:00</p>
+					<h3>Amethyst</h3>
+					<p>Morgan Humburg</p>
+				</section>
+
+				<section class="clearfix">
+					<img src="Images/Projects/CoverH2BH.jpg" alt="How to Be Human"/>
+					<p class="time">6:45</p>
+					<h3>How to Be Human</h3>
+					<p>Emily Dammers</p>
+				</section>
+			</section>
+
+		</article>
+
+		<footer role="contentinfo">
 			<p>Creative Media and Entertainment <br/>
 				College of Communication <br/>
 				Butler University
 			</p>
 		</footer>
-
-
 	</body>
 </html>
