--- a/class/students.html
+++ b/class/students.html
@@ -28,8 +28,8 @@
 			</ul>
 		</div>
 
-		<header><h1>Students</h1></div></header>
-		<article>
+		<header role="banner"><h1>Students</h1></div></header>
+		<article role="main">
 			<section class="studentBox">
 				<img src="Images/Students/KAdami.png" alt="Konstantina Adami"/>
 				<h3>Konstantina Adami</h3>
