--- a/class/contact.html
+++ b/class/contact.html
@@ -33,7 +33,7 @@
 			<p>If you have have questions or comments about previous events or this year's event, please
 					fill out the form below and we will respond to your inquiry as soon as possible.</p>
 			<br/>
-				<form action="SimpleForm.php" method="post">
+				<form action="thanks.php" method="post">
 					<label>Name:</label>
 					<input type="text" /><br/>
 					<label>Email:</label>
