--- a/class/projects.html
+++ b/class/projects.html
@@ -31,7 +31,7 @@
 
 		<header role="banner"><h1>Projects</h1></header>
 		<article role="main">
-			<div>
+			<div id="pageNav">
 				<ul>
 					<a href="#video"><li>Video</li></a>
 					<a href="#other"><li>Other</li></a>
