--- a/final/careers.html
+++ b/final/careers.html
@@ -2,6 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/main.css" rel="stylesheet" />
+  <style>body{background-color: #4E769C;} h1,h2,h3,h4,h5,h6 {color: #4E769C}</style>
 </head>
 <body>
 
@@ -13,42 +14,55 @@
     </header>
 
     <main>
-      <h1>BECOME PART OF RICKER'S GROWING FAMILY.</h1>
-      <p>Ricker's is always looking for enthusiastic and dependable people that share our core values and seek a rewarding and productive career choice. We invite you to learn more about our company and the exciting career opportunities we offer.</p>
+      <div class="row">
+        <div class="col s12 m8 l8">
+          <h1>BECOME PART OF RICKER'S GROWING FAMILY.</h1>
+          <p>Ricker's is always looking for enthusiastic and dependable people that share our core values and seek a rewarding and productive career choice. We invite you to learn more about our company and the exciting career opportunities we offer.</p>
 
-      <h4>Apply Online Now</h4>
-      <p>Click Here</p>
+          <hr />
 
-      <h4>Apply by Phone Now</h4>
-      <p>(844) 288-6459</p>
+          <h3 class="white-text">Apply Online Now</h4>
+          <p>Click Here</p>
 
+          <h3 class="white-text">Apply by Phone Now</h4>
+          <p>(844) 288-6459</p>
 
-      <h3>Company Mission</h3>
-      <p>Making Life Better - A great place to work and shop.</p>
+          <hr />
 
-      <h3>Your Future Starts Here!</h3>
-      <p>We will provide company paid training, coaching, and experiences that allow you to take advantage of career opportunities. As a family owned business, we care deeply about the people that work and shop with us. Team Members may be eligible for a wide variety of benefits including: Generous Wages, Company Paid Training, Career Advancement Opportunities, Tuition Reimbursement, Paid Vacation, Medical, Dental, Vision, and Life Insurances, Team Member Discounts, and Flexible Scheduling.</p>
+          <h3>Company Mission</h3>
+          <p>Making Life Better - A great place to work and shop.</p>
 
-      <h3>Skills you will learn at Ricker's...</h3>
-      <ol>
-        <li>Premium customer service skills</li>
-        <li>Merchandising</li>
-        <li>Marketing</li>
-        <li>Retailing</li>
-        <li>Communication skills</li>
-        <li>Teamwork</li>
-        <li>Sales</li>
-        <li>Customer conflict & Problem resolution</li>
-        <li>Accounting & Finance</li>
-        <li>Inventory control & Loss prevention</li>
-        <li>Multi-tasking</li>
-        <li>Safety & Security</li>
-        <li>Interpersonal skills</li>
-        <li>Schematic analysis/Planogram implementation</li>
-        <li>Basic computer & Excel skills</li>
-      </ol>
-      <p>Over 50% of our Store Leaders were promoted into the position.</p>
+          <h3>Your Future Starts Here!</h3>
+          <p>We will provide company paid training, coaching, and experiences that allow you to take advantage of career opportunities. As a family owned business, we care deeply about the people that work and shop with us. Team Members may be eligible for a wide variety of benefits including: Generous Wages, Company Paid Training, Career Advancement Opportunities, Tuition Reimbursement, Paid Vacation, Medical, Dental, Vision, and Life Insurances, Team Member Discounts, and Flexible Scheduling.</p>
 
+          <h3>Skills you will learn at Ricker's...</h3>
+          <ol>
+            <li>Premium customer service skills</li>
+            <li>Merchandising</li>
+            <li>Marketing</li>
+            <li>Retailing</li>
+            <li>Communication skills</li>
+            <li>Teamwork</li>
+            <li>Sales</li>
+            <li>Customer conflict &amp; Problem resolution</li>
+            <li>Accounting &amp; Finance</li>
+            <li>Inventory control &amp; Loss prevention</li>
+            <li>Multi-tasking</li>
+            <li>Safety &amp; Security</li>
+            <li>Interpersonal skills</li>
+            <li>Schematic analysis/Planogram implementation</li>
+            <li>Basic computer &amp; Excel skills</li>
+          </ol>
+          <p>Over 50% of our Store Leaders were promoted into the position.</p>
+        </div>
+        <div class="col s12 m4 l4">
+          <div class="pageNav">
+
+          </div>
+
+          <img src="img/weWantYou.jpg" />
+        </div>
+      </div>
     </main>
   </div>
 </body>
