--- a/final/header.html
+++ b/final/header.html
@@ -1,57 +1,50 @@
-<html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="css/main.css" rel="stylesheet" />
-</head>
-<body>
-  <header>
-    <div class="background">
-      <img src="img/logo2015.png" class="logo" />
-      <nav>
-        <ul>
-          <li>
-            <a href="rewards.html">Rewards</a>
-          </li>
-          <li>
-            <a href="careers.html">Careers</a>
-          </li>
-          <li>
-            <a href="community.html">Community</a>
-          </li>
-          <li>
-            <a href="specials.html">Specials</a>
-          </li>
-          <li>
-            <a href="locations.html">Locations</a>
-          </li>
-          <li>
-            <a href="company.html">Company</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    <div id="mobile-nav">
-      <ul>
-        <li>
-          <a href="rewards.html">Rewards</a>
-        </li>
-        <li>
-          <a href="careers.html">Careers</a>
-        </li>
-        <li>
-          <a href="community.html">Community</a>
-        </li>
-        <li>
-          <a href="specials.html">Specials</a>
-        </li>
-        <li>
-          <a href="locations.html">Locations</a>
-        </li>
-        <li>
-          <a href="company.html">Company</a>
-        </li>
-      </ul>
-    </div>
-  </header>
-  </body>
-  </html>
+<header>
+  <div>
+    <img id="logo" src="img/logo2015.png" />
+  </div>
+
+  <nav>
+    <ul>
+      <li>
+        <a href="rewards.html">Rewards</a>
+      </li>
+      <li>
+        <a href="careers.html">Careers</a>
+      </li>
+      <li>
+        <a href="community.html">Community</a>
+      </li>
+      <li>
+        <a href="specials.html">Specials</a>
+      </li>
+      <li>
+        <a href="locations.html">Locations</a>
+      </li>
+      <li>
+        <a href="company.html">Company</a>
+      </li>
+    </ul>
+  </nav>
+  <div id="mobile-nav">
+    <ul>
+      <li>
+        <a href="rewards.html">Rewards</a>
+      </li>
+      <li>
+        <a href="careers.html">Careers</a>
+      </li>
+      <li>
+        <a href="community.html">Community</a>
+      </li>
+      <li>
+        <a href="specials.html">Specials</a>
+      </li>
+      <li>
+        <a href="locations.html">Locations</a>
+      </li>
+      <li>
+        <a href="company.html">Company</a>
+      </li>
+    </ul>
+  </div>
+</header>
