--- a/final/rewards.html
+++ b/final/rewards.html
@@ -5,11 +5,12 @@
   <style>body{background-color: #93272C;} h1,h2,h3,h4,h5,h6 {color: #93272C}</style>
 </head>
 <body>
-
   <div class="container">
     <header>
-    <div class="background">
-      <img src="img/logo2015.png" class="logo" />
+      <div>
+        <img id="logo" src="img/logo2015.png" />
+      </div>
+
       <nav>
         <ul>
           <li>
@@ -32,30 +33,30 @@
           </li>
         </ul>
       </nav>
-    </div>
-    <div id="mobile-nav">
-      <ul>
-        <li>
-          <a href="rewards.html">Rewards</a>
-        </li>
-        <li>
-          <a href="careers.html">Careers</a>
-        </li>
-        <li>
-          <a href="community.html">Community</a>
-        </li>
-        <li>
-          <a href="specials.html">Specials</a>
-        </li>
-        <li>
-          <a href="locations.html">Locations</a>
-        </li>
-        <li>
-          <a href="company.html">Company</a>
-        </li>
-      </ul>
-    </div>
-  </header>
+      <div id="mobile-nav">
+        <ul>
+          <li>
+            <a href="rewards.html">Rewards</a>
+          </li>
+          <li>
+            <a href="careers.html">Careers</a>
+          </li>
+          <li>
+            <a href="community.html">Community</a>
+          </li>
+          <li>
+            <a href="specials.html">Specials</a>
+          </li>
+          <li>
+            <a href="locations.html">Locations</a>
+          </li>
+          <li>
+            <a href="company.html">Company</a>
+          </li>
+        </ul>
+      </div>
+    </header>
+
     <main>
       <div class="row">
         <div class="col s12 m8 l8">
